# financial-analyst-claude-training

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: block_dangerous_commands.py  block_push_main.py  lint_check.py  log_tool_post.py  log_tool_pre.py
.claude/skills/analysis-notebook/: SKILL.md
notebooks/: 2026-07-05_risk_analytics.ipynb  2026-07-05_volume_return_predictability.ipynb
scripts/: generate_ohlc.py
src/: data_io.py  monte_carlo.py  plotting.py  returns.py  risk.py  synthetic_ohlc.py
tests/: conftest.py  test_data_io.py  test_monte_carlo.py  test_returns.py  test_risk.py
