[project]
name = "financial-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "scipy>=1.17.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]  # sys.path.insert before local src/ imports is intentional
